# gravitational-balloon-mathematics

./: .gitignore  README.md  blog_equations.ipynb  constants.py  library_use.ipynb  reference.py  requirements.txt  setup.py  use.py
transit/transit_argument/: CONTENT_PLANS.md  README.md  pyproject.toml
transit/transit_argument/outputs/diagnostics/: anchor_ranking_hong_kong.csv  anchor_ranking_london.csv  anchor_ranking_new_york.csv  anchor_ranking_paris.csv  anchor_ranking_seoul.csv  anchor_ranking_tokyo.csv  population_assignment_hong_kong.csv  population_assignment_london.csv  population_assignment_new_york.csv  population_assignment_paris.csv  population_assignment_seoul.csv  population_assignment_tokyo.csv
transit/transit_argument/outputs/geojson/: station_times_hong_kong.geojson  station_times_london.geojson  station_times_new_york.geojson  station_times_paris.geojson  station_times_seoul.geojson  station_times_tokyo.geojson
transit/transit_argument/outputs/tables/: macrohabitat_sphere_thermal_bounds.csv  project_summary.csv  reachable_population_curve_hong_kong.csv  reachable_population_curve_london.csv  reachable_population_curve_new_york.csv  reachable_population_curve_paris.csv  reachable_population_curve_seoul.csv  reachable_population_curve_space_city_atmosphere.csv  reachable_population_curve_space_city_vacuum.csv  reachable_population_curve_tokyo.csv  space_city_tiers.csv  (+18 more)
transit/transit_argument/scripts/: build_project_summary.py  compute_space_city_mobility.py  compute_thermal_bounds.py  compute_vacuum_lattice.py  run_all.py  run_transit.py
(+81 files in other folders)
